--- a/series/00.md
+++ b/series/00.md
@@ -19,13 +19,16 @@
 
 **多様体（manifold）** とは、局所的にはユークリッド空間に見えるが、大域的には異なる構造を持つ空間のことである。
 
-最も身近な例は地球である。あなたが立っている地面は、目に見える範囲では平らに見える。地図を広げれば、近所の道路は直線的に描かれ、距離も正確に測れる。しかし、地球全体を見れば、それは球面である。平らな地図をいくら貼り合わせても、球面を完全に覆うことはできない。必ずどこかに歪みや切れ目が生じる。
+最も身近な例は地球である。あなたが立っている地面は、目に見える範囲では平らに見える。しかし、地球全体を見れば、それは球面である。平らな地図をいくら貼り合わせても、球面を完全に覆うことはできない。必ずどこかに歪みや切れ目が生じる。
+
+多様体を理解する鍵は、**「存在が許される場所の制限」**にある。例えば3次元空間内の球面上の点は、常に $x^2 + y^2 + z^2 = r^2$ という方程式に縛られている。この「厚みゼロ」の制約があるため、3次元の中にありながら、自由に動ける方向（次元）は表面に沿った2方向のみに制限される。
 
 これが多様体の本質だ：
 
 | 視点 | 地球の場合 | 深層学習の表現空間 |
 | --- | --- | --- |
 | **局所的** | 近所は平らに見える | 小さな摂動は線形近似できる |
+| **制限（厚み）** | 上下方向への移動が制限される | パラメータ間の依存関係による制約 |
 | **大域的** | 実際は球面 | 全体の構造は非線形で複雑 |
 
 > [!NOTE]
@@ -35,9 +38,11 @@
 
 深層学習において、データは高次元空間に埋め込まれるが、その「意味のある部分」は多くの場合、より低次元の多様体上に集中している。これを **多様体仮説（manifold hypothesis）** と呼ぶ。
 
-例えば、顔画像のデータセットを考えよう。各画像は数百万画素のベクトルとして表現されるが、「顔らしさ」を決める自由度（表情、向き、照明など）はせいぜい数十から数百程度である。つまり、顔画像は高次元空間の中の低次元多様体上に存在すると考えられる。
+「存在して良い場所」が制限されているということは、データが持つ真の自由度が、見かけ上の次元数よりもはるかに小さいことを意味する。
 
-この多様体の「形」を理解することが、表現学習の本質である。
+例えば、顔画像のデータセットを考えよう。各画像は数百万画素のベクトルとして表現されるが、「顔らしさ」を決める自由度（表情、向き、照明など）はせいぜい数十から数百程度である。つまり、顔画像は高次元空間という広大な「体積」の中に、極めて薄く折りたたまれた「低次元の皮（多様体）」として存在していると考えられる。
+
+この多様体の「形」を理解し、その「皮」に沿った移動や補間を行うことが、表現学習の本質である。
 
 > [!NOTE]
 > **多様体仮説の限界：** 多様体仮説は多くの実験的証拠に支持されているが、実データが「厳密な多様体」であるとは限らない。(i) ノイズや離散性により滑らかな多様体にならない、(ii) 局所次元が場所によって変わる、(iii) クラス境界付近で自己交差する、といった状況が起こりうる。実務では「多様体」というより **「低次元構造っぽさ」** として捉える方が安全である。後続回では、「多様体と見なせるためにどの仮定が必要か」を明示する。
