--- a/series/00.md
+++ b/series/00.md
@@ -47,29 +47,36 @@
 > [!NOTE]
 > **多様体仮説の限界：** 多様体仮説は多くの実験的証拠に支持されているが、実データが「厳密な多様体」であるとは限らない。(i) ノイズや離散性により滑らかな多様体にならない、(ii) 局所次元が場所によって変わる、(iii) クラス境界付近で自己交差する、(iv) クラスごとに非連結な“島”になる、などが起こりうる。実務では「多様体」というより **「低次元構造っぽさ」** として捉える方が安全である。後続回では、「多様体と見なせるためにどの仮定が必要か」を明示する。
 
-## 測地線：曲がった空間での「最短」
+## 測地線：曲がった空間での「直線」
 
 ### 測地線とは何か
 
 平らな空間では、2点間の最短経路は直線である。では、曲がった空間ではどうか。
 
-**測地線（geodesic）** とは、多様体上で「局所的に長さが停留（極小）」となる曲線である。地球上では、これは **大円（great circle）** に対応する。東京からニューヨークへの最短航路が、地図上では奇妙に曲がって見えるのは、球面上の測地線を平面に投影しているからだ。
+**測地線（geodesic）** とは、多様体上における「直線」の概念を一般化したものである。直感的には 「ハンドルを切らずに、その空間の歪みに沿って真っ直ぐ進む道」 と言える。地球上（球面）では、これは 大円（great circle）に対応する。東京からニューヨークへの最短航路が地図上で奇妙に曲がって見えるのは、球面上の測地線を平面に投影しているからだ。
 
-| 空間 | 測地線の形 | 例 |
-| --- | --- | --- |
-| ユークリッド空間 | 直線 | 紙の上で定規を引く |
-| 球面 | 大円 | 飛行機の国際線ルート |
-| 双曲空間 | 双曲線の一部 | 第12回で詳しく扱う |
+| 空間 | 曲率 | 測地線の形 | 例 |
+| --- | --- | --- | --- |
+| ユークリッド空間 | 0 | 直線（線分） | 紙の上で定規を引く |
+| 球面 | 正 | 大円の弧 | 飛行機の最短航路 |
+| 双曲空間 | 負 | （モデルによるが）境界に直交する円弧など | 第12回で詳しく扱う |
 
 > [!NOTE]
 > **測地線は「最短」とは限らない：**<br>
-> 測地線とは、多様体上で「真っ直ぐ進む」ことを一般化した概念であり、『（適切なパラメータ付けのもとで） **長さ** （あるいはエネルギー） **の変分が 0 になる＝「停留点」を満たす曲線**』として定義される。さらに物理的には、表面という拘束条件の下でも**内在的にはハンドルを切っていない**運動に対応し、数式では曲線 $\gamma(t)$ の速度 $\dot\gamma(t)$ が自分自身に沿って変化しない $\nabla_{\dot\gamma}\dot\gamma = 0$ （共変加速度が 0）という条件で表される。したがって測地線は、必ずしも**大域的な最短経路**とは限らない。
+> 測地線とは、多様体上で「真っ直ぐ進む」ことを一般化した概念であり、『（適切なパラメータ付けのもとで） **長さ** （あるいはエネルギー） **の変分が 0 になる＝「停留点」を満たす曲線**』として定義される。
+> さらに物理的には、表面という拘束条件の下でも**内在的にはハンドルを切っていない**運動に対応し、数式では曲線 $\gamma(t)$ の速度 $\dot\gamma(t)$ が自分自身に沿って変化しない $\nabla_{\dot\gamma}\dot\gamma = 0$ （共変加速度が0; 自らの進む方向に速度ベクトルを平行移動させ続ける=曲がらない）という条件で表される。したがって、最短経路であればそれは必ず測地線であるが、 測地線は必ずしも**大域的な最短経路**とは限らない。
 >
 > **最短性との違い：** <br>
 > 球面上の2点を結ぶ測地線は大円の弧で表される。近い2点では短い方の弧が最短だが、同じ「大円に沿って進む」経路でも、区間の取り方によっては**全体として最短でない**測地線がありうる（局所的には“真っ直ぐ”でも、大域的な最短性は保証されない）。
 >
 > **一意性の喪失：**<br>
 > 球面の対蹠点（真裏）に向かう場合、出発点から到達点へ至る**大円が無数に存在**し、それらは同じ長さの測地線になるため、「最短経路」が一意に定まらない。
+
+> [!TIP]
+> **用語の省略について**:
+> 厳密には「線全体」と「その一部（区間）」は異なる。
+> しかしながら、文脈から明らかなら「の弧」を省略して、「測地線（の弧）」は単に「測地線」、「大円（の弧）」は単に「大円」とよぶ。
+> 本講義でも、2点間を結ぶ経路を指す場合は、断りがない限り「弧（一部）」のことを指す。
 
 ### 深層学習における測地線
 
