--- a/series/00.md
+++ b/series/00.md
@@ -218,6 +218,13 @@ $$\tilde{\nabla}_ \theta \mathcal{L} = G(\theta)^{-1} \nabla_ \theta \mathcal{L}
 直感的には、「地形に応じて歩幅を調整する」ようなものだ。急な坂（分布が敏感に変わる方向）では小さく、緩やかな坂（分布があまり変わらない方向）では大きく歩く。
 
 > [!NOTE]
+> **「自然勾配」とは、多様体における本来の勾配のこと**<br>
+> 数学的には、リーマン計量が定まった多様体において「勾配」は一意に定義される。
+> それにもかかわらず、深層学習においてわざわざ「自然勾配」と呼称するのは、多くの場面で **「多様体の曲がりを無視した、パラメータ上の数値的な勾配」** が使われているからだ。
+> 「自然（Natural）」という言葉には、人間が便宜的に決めたパラメータの表現形式（座標系）に依存せず、
+> 確率分布という対象そのものが持つ幾何学的な構造から導かれる **「本来あるべき勾配」** である、という意味が込められている。
+
+> [!NOTE]
 > 自然勾配の計算は、フィッシャー情報行列の逆行列を必要とするため、大規模モデルでは直接計算が困難である。Adam（Kingma & Ba, 2015）等の適応的オプティマイザは、勾配の2次モーメントを座標ごとに正規化する「前処理付き勾配法」であり、特定の仮定のもとで自然勾配に **似た形** になることがある。ただし、両者は同一ではなく、「Adam＝自然勾配の近似」と言い切るのは過剰主張である。
 
 ### 本講義の立ち位置
